--- a/bin/index.html
+++ b/bin/index.html
@@ -40,7 +40,7 @@
 	<script src="js/libs/phaser.js" type="text/javascript"></script>
 	<script src="js/libs/firebase.js" type="text/javascript"></script>
 	<script src="js/libs/phaser.plugin.stateTransition.js" type="text/javascript"></script>
-	<script src="js/game.js" type="text/javascript"></script>
+	<script src="js/game.js?ver=1.0" type="text/javascript"></script>
 </body>
 
 </html>
